--- a/login_admin.html
+++ b/login_admin.html
@@ -11,16 +11,15 @@
     <body class="bodyInput">
         <div class="box">
             <form id="login" action="validar.php" method="post">
-                <input type="hidden" name="tipo" value ="usuario" />
-                    <span class="text-center">Entrar como alumno</span>
+                <input type="hidden" name="tipo" value ="administrador" />
+                    <span class="text-center">Entrar como administrador</span>
                 <div class="input-container">
-                    <input type="text" name="login" required=""/>
+                    <input type="text"  id="login" name="login" required=""/>
                     <label>Username</label>		
                 </div>
                 <div class="input-container">		
-                    <input type="text" name="password" required=""/>
+                    <input type="text" id="password" name="password" required=""/>
                     <label>Password</label>
-                    <a class="passForgot" href="" id="forgot_pass">Forgot Password?</a>
                 </div>
                 <button type="submit" class="button-22">Login</button>
                 <br>
