--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <p class="logoTitle"><b>PHP</b>rogrammer <b>Academy</b></p>
 
             <nav class="navegacion">
+                <a href="login_admin.html">Administrador/a>
                 <a href="login.html">Login</a>
                 <a href="register.html">Register</a>
             </nav>
