--- a/login_admin.html
+++ b/login_admin.html
@@ -23,7 +23,7 @@
                 </div>
                 <button type="submit" class="button-22">Login</button>
                 <br>
-                <a class="noAccount" href="register.html">¿No tienes cuenta?</a>
+                <a class="noAccount" href="adios.php">Salir</a>
 
             </form>	
         </div>
