revisados respuestas de error

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300, 400, 700, 900">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/bebas" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/bebas" type="text/css" />
     <title>PHProgrammer Academy</title>
 </head>
 
 <body>
 
-    <header class="site-header">  
+    <header class="site-header">
         <div class="barra">
             <p class="logoTitle"><b>PHP</b>rogrammer <b>Academy</b></p>
 
@@ -38,26 +39,30 @@
         <br>
         <button class="button-51" role="button">Ver vídeo tutorial</button>
     </main>
-   
+
     <section class="contenedor section">
         <h2 class="encabezado-usuarios">Acceso Usuarios</h2>
-        
+
         <div class="iconos-usuarios">
             <div class="icono">
                 <img src="images/alumni.png" alt="alumni">
                 <h3>Área de Alumnos</h3>
-                <p>Podréis seleccionar los cursos en los que estáis inscritos. Visualizar vuestras asignaturas y clases y vuestras notas de evaluación continua, exámenes y notas finales.</p>
+                <p>Podréis seleccionar los cursos en los que estáis inscritos. Visualizar vuestras asignaturas y clases
+                    y vuestras notas de evaluación continua, exámenes y notas finales.</p>
             </div>
             <div class="icono">
                 <img src="images/profesores.png" alt="profesores">
                 <h3>Área de Profesores</h3>
-                <p>Acceso a vuestras clases y a los expedientes de los alumnos matriculados en ellas. Podréis modificar trabajos y exámenes, horas y días de entrega y las notas de los trabajos, de la EC y final.</p>
+                <p>Acceso a vuestras clases y a los expedientes de los alumnos matriculados en ellas. Podréis modificar
+                    trabajos y exámenes, horas y días de entrega y las notas de los trabajos, de la EC y final.</p>
             </div>
             <div class="icono">
                 <img src="images/admin.png" alt="Administrador">
                 <h3>Área de Administrador</h3>
-                <p>Acceso y modificación de los expedientes de los alumnos con las asignaturas que cursa cada uno y las notas de los trabajos y exámenes. También a todas las asignaturas, sus agendas y porcentajes de notas.</p>
-            </div>    
+                <p>Acceso y modificación de los expedientes de los alumnos con las asignaturas que cursa cada uno y las
+                    notas de los trabajos y exámenes. También a todas las asignaturas, sus agendas y porcentajes de
+                    notas.</p>
+            </div>
         </div>
     </section>
 
@@ -67,12 +72,14 @@
             <div class="icono">
                 <img src="images/register.png" alt="register">
                 <h3>Registro</h3>
-                <p>Para acceder a vuestras respectivas áreas, debéis registraros con los datos personales requeridos.</p>
+                <p>Para acceder a vuestras respectivas áreas, debéis registraros con los datos personales requeridos.
+                </p>
             </div>
             <div class="icono">
                 <img src="images/candado.png" alt="candado">
                 <h3>Login</h3>
-                <p>Una vez logueados, podréis acceder a vuestra área de referencia y consultar los contenidos específicos.</p>
+                <p>Una vez logueados, podréis acceder a vuestra área de referencia y consultar los contenidos
+                    específicos.</p>
             </div>
             <div class="icono">
                 <img src="images/profile.png" alt="profile">
@@ -81,6 +88,7 @@
             </div>
         </div>
     </section>
-    
+
 </body>
+
 </html>
